styles.css
/* ... */
.path-mod-pdfannotator .pdfViewer.removePageBorders .spread .page,
.path-mod-pdfannotator .pdfViewer.removePageBorders.scrollHorizontal .page,
.path-mod-pdfannotator .pdfViewer.removePageBorders.scrollWrapped .page {
  margin-left: 5px;
  margin-right: 5px;
}

.path-mod-pdfannotator .pdfViewer .page canvas {
    margin: 0;
    display: block;
}

.path-mod-pdfannotator .pdfViewer .page canvas[hidden] {
    display: none;
}


.path-mod-pdfannotator .pdfViewer .page .loadingIcon {
    position: absolute;
    display: block;
    left: 0;
    right: 0;
    bottom: 0;
    background: url('images/loading-icon.gif') center no-repeat;
}

.path-mod-pdfannotator .pdfViewer .page .loadingIcon.notVisible {
    background: none;
}

.path-mod-pdfannotator .pdfViewer.enablePermissions .textLayer span {
    user-select: none !important;
    cursor: not-allowed;
}

.path-mod-pdfannotator .pdfPresentationMode .pdfViewer {
  padding-bottom: 0;
}

.path-mod-pdfannotator .pdfPresentationMode .spread {
  margin: 0;
}

.path-mod-pdfannotator .pdfPresentationMode .pdfViewer .page {
  margin: 0 auto;
  border: 2px solid transparent;
}

.path-mod-pdfannotator .pdfPresentationMode:-webkit-full-screen .pdfViewer .page {
    margin-bottom: 100%;
    border: 0;
}

.path-mod-pdfannotator .pdfPresentationMode:-moz-full-screen .pdfViewer .page {
    margin-bottom: 100%;
    border: 0;
}

.path-mod-pdfannotator .pdfPresentationMode:-ms-fullscreen .pdfViewer .page {
    margin-bottom: 100% !important;
    border: 0;
}

.path-mod-pdfannotator .pdfPresentationMode:fullscreen .pdfViewer .page {
    margin-bottom: 100%;
    border: 0;
}

body {
    background-color: #eee;
    font-family: sans-serif;
    margin: 0;
}

.path-mod-pdfannotator .pdfViewer .canvasWrapper {
    box-shadow: 0 0 3px #bbb;
    position: absolute;
}
.path-mod-pdfannotator .pdfViewer .page {
    margin-bottom: 10px;
}

.path-mod-pdfannotator .annotationLayer {
    position: absolute;
    z-index: 2;
}

.path-mod-pdfannotator #content-wrapper {
    display: inline-block;
    overflow: auto;
    bottom: 0;
    height: 100%;
}

.path-mod-pdfannotator #comment-wrapper {
    display: inline-block;
    overflow: auto;
    background: #eaeaea;
    border-left: 1px solid #d0d0d0;
    bottom: 0;
    height: 100%;
    margin: 0;
}

.path-mod-pdfannotator #comment-wrapper button .icon {
    color: #999;
    margin-right: 0;
}

@media only screen and (max-width: 991px) {
    .path-mod-pdfannotator #content-wrapper,
    .path-mod-pdfannotator #comment-wrapper {
        height: 50%;
    }
}

.path-mod-pdfannotator #comment-wrapper h4,
.path-mod-pdfannotator #comment-nav {
    margin: 10px;
}

.path-mod-pdfannotator #comment-nav button {
    border: none;
    background-color: transparent;
}

.path-mod-pdfannotator #comment-nav .icon {
    color: #999 !important;
}

.path-mod-pdfannotator #searchForm {
    display: flex;
    margin-top: 10px;
}

.path-mod-pdfannotator #searchPattern {
    padding-right: 25px;
    height: 30px;
}

.path-mod-pdfannotator #searchClear {
    margin-left: -25px;
    padding: 0;
}

.path-mod-pdfannotator #comment-wrapper .pdfannotator-comment-list {
    font-size: 12px;
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: visible;
}
.path-mod-pdfannotator #comment-wrapper .comment-list-item {
    padding: 10px;
}
.path-mod-pdfannotator #comment-wrapper .comment-list-item.questions {
    overflow: auto;
}
.path-mod-pdfannotator #comment-wrapper,
#comment-wrapper h1,
#comment-wrapper h2,
#comment-wrapper h3,
#comment-wrapper h4,
#comment-wrapper h5,
#comment-wrapper h6,
#comment-wrapper p,
#comment-wrapper span,
#comment-wrapper div,
#comment-wrapper label,
#comment-wrapper input,
#comment-wrapper textarea,
#comment-wrapper select,
#comment-wrapper button {
    font-family: 'Open Sans', Arial, sans-serif;
}

#comment-wrapper .comment-list-container {
    position: relative;
    left: 0;
    right: 0;
    bottom: 47px;
    overflow: visible;
}
.path-mod-pdfannotator #comment-wrapper .comment-list-form {
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 10px;
}

.path-mod-pdfannotator #comment-wrapper .comment-list-form .tox.tox-tinymce,
.path-mod-pdfannotator .edit-comment-form .tox.tox-tinymce {
    min-height: 350px;
}

.path-mod-pdfannotator #comment-wrapper .comment-list-form .tox.tox-tinymce:has(.tox-toolbar.tox-toolbar--scrolling),
.path-mod-pdfannotator .edit-comment-form .tox.tox-tinymce:has(.tox-toolbar.tox-toolbar--scrolling) {
    min-height: 250px;
}

.path-mod-pdfannotator #comment-wrapper .editor_atto { /* Editor in fullscreen must be over the toolbar and annotations. */
    z-index: 60;
}
.path-mod-pdfannotator #comment-wrapper .editor_atto_content {
    border-width: 0px 1px 1px 1px;
    border-style: solid;
    border-color: #8f959e;
}
.path-mod-pdfannotator div.row {
    margin-left: 0;
}
.path-mod-pdfannotator #comment-wrapper .comment-list-form input {
    padding: 5px;
    width: 100%;
}
.path-mod-pdfannotator .pdfViewer .page {
    border-image: none;
    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1), 0 2px 8px rgba(0,0,0,0.08);
}

.path-mod-pdfannotator .chat-message {
    border-radius: 4px;
    padding: 4px 10px;
    margin: 0 0 10px 0;
    background-color: #fefefe;
}

.path-mod-pdfannotator .chat-message-container {
    flex-grow: 1;
    word-break: break-word;
}

.path-mod-pdfannotator .chat-message.owner:not(.questioncomment) {
    margin: 0 10px 10px 10px;
    border: 3px solid #c7ddf2;
}

.path-mod-pdfannotator .chat-message.mark {
    border: 3px solid red !important;
}

.path-mod-pdfannotator .chat-message.correct {
    border: 3px solid green !important;
}

.path-mod-pdfannotator .chat-message:not(.questioncomment) {
    margin: 0 10px 10px 10px;
}

.path-mod-pdfannotator .chat-message.comment-list-item:not(.questions) {
    display: flex;
    padding-left: 0 !important;
}
/* ... */

